# maybe-later

./: Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
maybe_later/: _types.py  config.py
maybe_later/console/: application.py  outputs.py  utils.py
maybe_later/db/: api.py  models.py  services.py
maybe_later/downloaders/: __init__.py  get_article.py  models.py
maybe_later/models/: article.py
maybe_later/savers/: __init__.py  article_md_saver.py  article_saver.py  article_to_db.py  models.py
maybe_later/savers/article_savers/: __init__.py  article_saver.py  atricle_md_saver.py
tests/: conftest.py  test_config.py  test_config.yaml
tests/console/: test_utils.py
tests/data_files_for_tests/: article.html
tests/db/: test_api.py  test_services.py
tests/downloaders/: test_get_article.py
tests/models/: test_article.py
tests/savers/article_savers/: test_article_md_saver.py
