[tool.poetry]
name = "maybe-later"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kurlov <dmitriik@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.1.3"
httpx = "^0.23.0"
aiofiles = "^0.8.0"
markdownify = "^0.11.2"
sqlmodel = "^0.0.6"
aiosqlite = "^0.17.0"
PyYAML = "^6.0"
newspaper3k = "^0.2.8"
SQLAlchemy = "1.4.35"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
tox = "^3.25.0"
types-PyYAML = "^6.0.7"
pytest-httpx = "^0.21.0"
types-aiofiles = "^0.8.8"
types-tabulate = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
maybe-later = "maybe_later.console.application:main"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["maybe_later", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "maybe_later"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.mypy]
mypy_path = "maybe_later"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true